--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -1,6 +1,6 @@
 .background {
   background-color: var(--color-primary);
-  width: 100%;
-  padding: 20px;
-  text-align: center;
+  padding: 10px;
+  border-radius: 10px;
+  margin-top: 100px;
 }
