--- a/components/shared/Footer/StoreFrontFooter/styles.module.css
+++ b/components/shared/Footer/StoreFrontFooter/styles.module.css
@@ -8,3 +8,19 @@
 .line {
   background-color: rgba(245, 245, 245, 0.3);
 }
+
+@media screen and (max-width: 991px) {
+  .logo {
+    display: none !important;
+  }
+
+  .social_medias {
+    text-align: center;
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .social_medias svg {
+    font-size: 1.4rem;
+  }
+}
