--- a/components/shared/Header/StoreFrontHeader/styles.module.css
+++ b/components/shared/Header/StoreFrontHeader/styles.module.css
@@ -4,3 +4,16 @@
   border-radius: 10px;
   margin-top: 100px;
 }
+
+.background svg {
+  cursor: pointer;
+  transition: color 0.2s;
+}
+
+.background svg:hover {
+  color: var(--color-hover);
+}
+
+.background svg:active {
+  color: var(--color-active);
+}
